--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <select class="select" id="filter">
           <option disabled selected>Filter by Region</option>
           <option>Europe</option>
+          <option>America</option>
           <option>Asia</option>
           <option>Oceania</option>
           <option>Africa</option>
